--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<!DOCTPE html>
+<!DOCTYPE HTML>
 <html>
-<head>
-</head>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <div id="container"></div>
 
-<body>
-<p><h1>Hello World!</h1><p>
-</body>
+    <div id="SettingsBox">
 
+<p id="cDrag">Controls</p>
+<p id="mPos"> X: 0, Y: 0 </p>
+
+    </div>
+
+    <script src="kinetic-v5.1.0.min.js"></script>
+    <script defer="defer" src="test.js">
+      
+    </script>
+  </body>
 </html>
