--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <script src="kinetic-v5.1.0.min.js"></script>
-    <script defer="defer" src="test.js">
+    <script defer="defer" src="script.js">
       
     </script>
   </body>
