--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <title>
+      Game of Life implemented (eventually) in Javascript
+    </title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
