--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
       Game of Life implemented (eventually) in Javascript
     </title>
-    <link rel="icon" type="image/ico" href="favicon.ico">
+    <link rel="shortcut icon"  href="favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
