--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
       Game of Life implemented (eventually) in Javascript
     </title>
-    <link rel="shortcut icon"  href="favicon.ico"/>
+    <link rel="shortcut icon"  href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -14,6 +14,19 @@
 
 <p id="cDrag">Controls</p>
 <p id="mPos"> X: 0, Y: 0 </p>
+<h3>What does this page do?</h3>
+<p>
+
+Well it keeps changing. I'm just using this as a sort of learning ground for
+my kineticJS animations. So whatever this page does currently will be displayed
+here.
+
+At the moment it displays a graph of the framerate over time.
+
+I just wanted to see how efficient my animations are. It'll have the game of
+life simulation. Eventually.
+
+</p>
 
     </div>
 
